[gd_scene load_steps=31 format=3 uid="uid://2weabnirnavw"]

[ext_resource type="Script" path="res://allies/builder/builder.gd" id="1_yn65f"]
[ext_resource type="Texture2D" uid="uid://dkpsl1raa542g" path="res://game assets test/Huntress/Huntress/Sprites/Attack2.png" id="2_42i2i"]
[ext_resource type="Texture2D" uid="uid://d71uacgugxcf" path="res://game assets test/Huntress/Huntress/Sprites/Death.png" id="3_8nvew"]
[ext_resource type="Texture2D" uid="uid://cn6vc1q8fruc" path="res://game assets test/Huntress/Huntress/Sprites/Idle.png" id="4_0se0g"]
[ext_resource type="Texture2D" uid="uid://b34crdnt6kbwi" path="res://game assets test/Huntress/Huntress/Sprites/Run.png" id="5_onkmy"]
[ext_resource type="Script" path="res://allies/builder/finiteStateMachine_builder.gd" id="6_iwl5e"]
[ext_resource type="Script" path="res://allies/builder/idle.gd" id="7_lwn63"]
[ext_resource type="Script" path="res://allies/builder/build.gd" id="8_qpeig"]
[ext_resource type="Script" path="res://allies/builder/go_to_building.gd" id="9_tv234"]
[ext_resource type="Script" path="res://allies/builder/build_range.gd" id="10_6w4gl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oy82c"]
radius = 8.0
height = 34.0

[sub_resource type="Animation" id="Animation_0xgk7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o5h15"]
resource_name = "build"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_42i2i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_jrkhb"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_8nvew")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_q0sn1"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_0se0g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_fcccp"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_onkmy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_as6yj"]
_data = {
"RESET": SubResource("Animation_0xgk7"),
"build": SubResource("Animation_o5h15"),
"death": SubResource("Animation_jrkhb"),
"idle": SubResource("Animation_q0sn1"),
"run": SubResource("Animation_fcccp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_axnsf"]
animation = &"build"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jhjfe"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lhmh0"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yyu85"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hplwk"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_fcnbd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lhmh0")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_yyu85")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_hplwk")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ya3rt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c4fxk"]
advance_mode = 2
advance_condition = &"dies"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b726e"]
advance_mode = 2
advance_condition = &"build"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gbxs4"]
advance_mode = 2
advance_condition = &"stop_building"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6u4so"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8h1kl"]
states/End/position = Vector2(897, 100)
states/build/node = SubResource("AnimationNodeAnimation_axnsf")
states/build/position = Vector2(388, 17)
states/death/node = SubResource("AnimationNodeAnimation_jhjfe")
states/death/position = Vector2(583, 110)
states/walk/node = SubResource("AnimationNodeBlendSpace1D_fcnbd")
states/walk/position = Vector2(357, 110)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_ya3rt"), "walk", "death", SubResource("AnimationNodeStateMachineTransition_c4fxk"), "walk", "build", SubResource("AnimationNodeStateMachineTransition_b726e"), "build", "walk", SubResource("AnimationNodeStateMachineTransition_gbxs4"), "death", "End", SubResource("AnimationNodeStateMachineTransition_6u4so")]
graph_offset = Vector2(-94.4199, -51)

[sub_resource type="CircleShape2D" id="CircleShape2D_1ac7h"]
radius = 17.0

[node name="builder" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_yn65f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_oy82c")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -3)
scale = Vector2(0.853333, 0.873333)
texture = ExtResource("2_42i2i")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_as6yj")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_8h1kl")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/build = false
parameters/conditions/dies = false
parameters/conditions/stop_building = false
parameters/walk/blend_position = 0.0

[node name="finiteStateMachine_builder" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("6_iwl5e")
state = NodePath("idle")

[node name="idle" type="Node" parent="finiteStateMachine_builder" node_paths=PackedStringArray("actor")]
script = ExtResource("7_lwn63")
actor = NodePath("../..")

[node name="build" type="Node" parent="finiteStateMachine_builder" node_paths=PackedStringArray("actor")]
script = ExtResource("8_qpeig")
actor = NodePath("../..")

[node name="go_to_building" type="Node" parent="finiteStateMachine_builder" node_paths=PackedStringArray("actor")]
script = ExtResource("9_tv234")
actor = NodePath("../..")

[node name="build_range" type="Area2D" parent="."]
monitoring = false
script = ExtResource("10_6w4gl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="build_range"]
shape = SubResource("CircleShape2D_1ac7h")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="build_range" to="." method="_on_build_range_area_entered"]
